StereoKitC/stereokit.h

typedef int32_t bool32_t;
///////////////////////////////////////////

/*Specifies a type of display mode StereoKit uses, like
  Mixed Reality headset display vs. a PC display, or even just
  rendering to an offscreen surface, or not rendering at all!*/
typedef enum display_mode_ {
	/*Creates an OpenXR instance, and drives display/input
	  through that.*/
	display_mode_mixedreality     = 0,
	/*Creates a flat, Win32 window, and simulates some MR
	  functionality. Great for debugging.*/
	display_mode_flatscreen       = 1,
	/*Not tested yet, but this is meant to run StereoKit
	  without rendering to any display at all. This would allow for
	  rendering to textures, running a server that can do MR related
	  tasks, etc.*/
	display_mode_none             = 2,
} display_mode_;
/*Severity of a log item.*/
typedef enum log_ {
	log_none                      = 0,
	/*This is for diagnostic information, where you need to know
	  details about what -exactly- is going on in the system. This
	  info doesn't surface by default.*/
	log_diagnostic,
	/*This is non-critical information, just to let you know what's
	  going on.*/
	log_inform,
	/*Something bad has happened, but it's still within the realm of
	  what's expected.*/
	log_warning,
	/*Danger Will Robinson! Something really bad just happened and
	  needs fixing!*/
	log_error
} log_;
/*This tells about the app's current focus state, whether it's active and
  receiving input, or if it's backgrounded or hidden. This can be
  important since apps may still run and render when unfocused, as the app
  may still be visible behind the app that _does_ have focus.*/
typedef enum app_focus_ {
	/*This StereoKit app is active, focused, and receiving input from the
	  user. Application should behave as normal.*/
	app_focus_active,
	/*This StereoKit app has been unfocused, something may be compositing
	  on top of the app such as an OS dashboard. The app is still visible,
	  but some other thing has focus and is receiving input. You may wish
	  to pause, disable input tracking, or other such things.*/
	app_focus_background,
	/*This app is not rendering currently.*/
	app_focus_hidden,
} app_focus_;
typedef struct sk_settings_t {
	const char    *app_name;
	const char    *assets_folder;
	display_mode_  display_preference;
	display_blend_ blend_preference;
	bool32_t       no_flatscreen_fallback;
	depth_mode_    depth_mode;
	log_           log_filter;
	bool32_t       overlay_app;
	uint32_t       overlay_priority;
	int32_t        flatscreen_pos_x;
	int32_t        flatscreen_pos_y;
	int32_t        flatscreen_width;
	int32_t        flatscreen_height;
	bool32_t       disable_flatscreen_mr_sim;
	bool32_t       disable_desktop_input_window;
	bool32_t       disable_unfocused_sleep;

	void          *android_java_vm;  // JavaVM*
	void          *android_activity; // jobject
} sk_settings_t;
typedef struct system_info_t {
	display_       display_type;
	int32_t        display_width;
	int32_t        display_height;
	bool32_t       spatial_bridge_present;
	bool32_t       perception_bridge_present;
	bool32_t       eye_tracking_present;
	bool32_t       overlay_app;
	bool32_t       world_occlusion_present;
	bool32_t       world_raycast_present;
} system_info_t;
SK_API bool32_t      sk_init               (sk_settings_t settings);
SK_API void          sk_set_window         (void *window);
SK_API void          sk_set_window_xam     (void *window);
SK_API void          sk_shutdown           ();
SK_API void          sk_quit               ();
SK_API bool32_t      sk_step               (void (*app_update)(void));
SK_API void          sk_run                (void (*app_update)(void), void (*app_shutdown)(void) sk_default(nullptr));
SK_API void          sk_run_data           (void (*app_update)(void *update_data), void *update_data, void (*app_shutdown)(void *shutdown_data), void *shutdown_data);
SK_API bool32_t      sk_is_stepping        ();
SK_API display_mode_ sk_active_display_mode();
SK_API sk_settings_t sk_get_settings       ();
SK_API system_info_t sk_system_info        ();
SK_API const char   *sk_version_name       ();
SK_API uint64_t      sk_version_id         ();
SK_API app_focus_    sk_app_focus          ();
///////////////////////////////////////////

// TODO: remove `get` and `elapsed` in v0.4
SK_API SK_DEPRECATED double        time_get_raw          ();
SK_API SK_DEPRECATED float         time_getf_unscaled    ();
SK_API SK_DEPRECATED double        time_get_unscaled     ();
SK_API SK_DEPRECATED float         time_getf             ();
SK_API SK_DEPRECATED double        time_get              ();
SK_API SK_DEPRECATED float         time_elapsedf_unscaled();
SK_API SK_DEPRECATED double        time_elapsed_unscaled ();
SK_API SK_DEPRECATED float         time_elapsedf         ();
SK_API SK_DEPRECATED double        time_elapsed          ();
SK_API double        time_total_raw        ();
SK_API float         time_totalf_unscaled  ();
SK_API double        time_total_unscaled   ();
SK_API float         time_totalf           ();
SK_API double        time_total            ();
SK_API float         time_stepf_unscaled   ();
SK_API double        time_step_unscaled    ();
SK_API float         time_stepf            ();
SK_API double        time_step             ();
SK_API void          time_scale            (double scale);
SK_API void          time_set_time         (double total_seconds, double frame_elapsed_seconds sk_default(0));
typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;
typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;
typedef union matrix {
	vec4 row[4];
	float m[16];
} matrix;
typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;
SK_API vec3     vec3_cross                (const sk_ref(vec3) a, const sk_ref(vec3) b);
SK_API quat     quat_difference           (const sk_ref(quat) a, const sk_ref(quat) b);
SK_API quat     quat_lookat               (const sk_ref(vec3) from, const sk_ref(vec3) at);
SK_API quat     quat_lookat_up            (const sk_ref(vec3) from, const sk_ref(vec3) at, const sk_ref(vec3) up);
SK_API quat     quat_from_angles          (float pitch_x_deg, float yaw_y_deg, float roll_z_deg);
SK_API quat     quat_slerp                (const sk_ref(quat) a, const sk_ref(quat) b, float t);
SK_API quat     quat_normalize            (const sk_ref(quat) a);
SK_API quat     quat_inverse              (const sk_ref(quat) a);
SK_API quat     quat_mul                  (const sk_ref(quat) a, const sk_ref(quat) b);
SK_API vec3     quat_mul_vec              (const sk_ref(quat) a, const sk_ref(vec3) b);
SK_API matrix   pose_matrix               (const sk_ref(pose_t) pose, vec3 scale sk_default({1,1,1}));
SK_API void     pose_matrix_out           (const sk_ref(pose_t) pose, sk_ref(matrix) out_result, vec3 scale sk_default({1,1,1}));
SK_API void         tex_on_load             (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context), void *context);
SK_API void         tex_on_load_remove      (tex_t texture, void (*asset_on_load_callback)(tex_t texture, void *context));
SK_API sound_t      sound_generate       (float (*audio_generator)(float sample_time), float duration);
///////////////////////////////////////////

typedef struct file_filter_t {
	char ext[32];
} file_filter_t;
/*When opening the Platform.FilePicker, this enum describes
  how the picker should look and behave.*/
typedef enum picker_mode_ {
	/*Allow opening a single file.*/
	picker_mode_open,
	/*Allow the user to enter or select the name of the
	  destination file.*/
	picker_mode_save,
} picker_mode_;
SK_API void     platform_file_picker        (picker_mode_ mode, void *callback_data, void (*picker_callback)(void *callback_data, bool32_t confirmed, const char *filename), const file_filter_t *filters, int32_t filter_count);
SK_API void     platform_file_picker_sz     (picker_mode_ mode, void *callback_data, void (*picker_callback_sz)(void *callback_data, bool32_t confirmed, const char *filename_ptr, int32_t filename_length), const file_filter_t *in_arr_filters, int32_t filter_count);
///////////////////////////////////////////

/*What type of device is the source of the pointer? This is a
  bit-flag that can contain some input source family information.*/
typedef enum input_source_ {
	/*Matches with all input sources!*/
	input_source_any           = 0x7FFFFFFF,
	/*Matches with any hand input source.*/
	input_source_hand          = 1 << 0,
	/*Matches with left hand input sources.*/
	input_source_hand_left     = 1 << 1,
	/*Matches with right hand input sources.*/
	input_source_hand_right    = 1 << 2,
	/*Matches with Gaze category input sources.*/
	input_source_gaze          = 1 << 4,
	/*Matches with the head gaze input source.*/
	input_source_gaze_head     = 1 << 5,
	/*Matches with the eye gaze input source.*/
	input_source_gaze_eyes     = 1 << 6,
	/*Matches with mouse cursor simulated gaze as an input source.*/
	input_source_gaze_cursor   = 1 << 7,
	/*Matches with any input source that has an activation button!*/
	input_source_can_press     = 1 << 8,
} input_source_;
/*A bit-flag for the current state of a button input.*/
typedef enum button_state_ {
	/*Is the button currently up, unpressed?*/
	button_state_inactive      = 0,
	/*Is the button currently down, pressed?*/
	button_state_active        = 1 << 0,
	/*Has the button just been released? Only true for a single frame.*/
	button_state_just_inactive = 1 << 1,
	/*Has the button just been pressed? Only true for a single frame.*/
	button_state_just_active   = 1 << 2,
	/*Has the button just changed state this frame?*/
	button_state_changed       = button_state_just_inactive | button_state_just_active,
	/*Matches with all states!*/
	button_state_any           = 0x7FFFFFFF,
} button_state_;
typedef struct pointer_t {
	input_source_ source;
	button_state_ tracked;
	button_state_ state;
	ray_t         ray;
	quat          orientation;
} pointer_t;
SK_API void                  input_subscribe      (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void                  input_unsubscribe    (input_source_ source, button_state_ input_event, void (*input_event_callback)(input_source_ source, button_state_ input_event, const sk_ref(pointer_t) in_pointer));
SK_API void              backend_openxr_add_callback_pre_session_create(void (*xr_pre_session_create_callback)(void* context), void* context);
SK_API void              backend_openxr_add_callback_poll_event        (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer), void* context);
SK_API void              backend_openxr_remove_callback_poll_event     (void (*xr_poll_event_callback)(void* context, void* XrEventDataBuffer));
SK_API void log_subscribe  (void (*log_callback)(log_ level, const char *text));
SK_API void log_unsubscribe(void (*log_callback)(log_ level, const char *text));