StereoKit/Native/NativeAPI.cs

// This is a generated file based on stereokit.h! Please don't modify it
// directly :) Instead, modify the header file, and run the StereoKitAPIGen
// project.

using System;
using System.Runtime.InteropServices;

namespace StereoKit
{
	internal static partial class NativeAPI
	{
		const string            dll   = "StereoKitC";
		const CharSet           ascii = CharSet.Ansi;
		const CharSet           utf16 = CharSet.Unicode;
		const CallingConvention call  = CallingConvention.Cdecl;

		///////////////////////////////////////////

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void AppUpdate(IntPtr updateData);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void AppShutdown(IntPtr shutdownData);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void AssetOnLoadCallback(IntPtr texture, IntPtr context);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate float AudioGenerator(float sampleTime);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void PickerCallback(IntPtr callbackData, int confirmed, string filename);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void PickerCallbackSz(IntPtr callbackData, int confirmed, IntPtr filenamePtr, int filenameLength);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void InputEventCallback(InputSource source, BtnState inputEvent, in Pointer inPointer);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void XrPreSessionCreateCallback(IntPtr context);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void XrPollEventCallback(IntPtr context, IntPtr XrEventDataBuffer);
		[UnmanagedFunctionPointer(CallingConvention.Cdecl)] internal delegate void LogCallback(LogLevel level, string text);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sk_init             (SKSettings settings);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sk_set_window       (IntPtr window);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sk_set_window_xam   (IntPtr window);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sk_shutdown         ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sk_quit             ();
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sk_step             ([MarshalAs(UnmanagedType.FunctionPtr)] Action app_update);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sk_run              ([MarshalAs(UnmanagedType.FunctionPtr)] Action app_update, [MarshalAs(UnmanagedType.FunctionPtr)] Action app_shutdown);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                sk_run_data         ([MarshalAs(UnmanagedType.FunctionPtr)] AppUpdate app_update, IntPtr update_data, [MarshalAs(UnmanagedType.FunctionPtr)] AppShutdown app_shutdown, IntPtr shutdown_data);
		[DllImport(dll, CallingConvention = call                 )] public static extern int                 sk_is_stepping      ();
		[DllImport(dll, CallingConvention = call                 )] public static extern DisplayMode         sk_active_display_mode();
		[DllImport(dll, CallingConvention = call                 )] public static extern SKSettings          sk_get_settings     ();
		[DllImport(dll, CallingConvention = call                 )] public static extern SystemInfo          sk_system_info      ();
		[DllImport(dll, CallingConvention = call, CharSet = ascii)] public static extern IntPtr              sk_version_name     ();
		[DllImport(dll, CallingConvention = call                 )] public static extern ulong               sk_version_id       ();
		[DllImport(dll, CallingConvention = call                 )] public static extern AppFocus            sk_app_focus        ();

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_get_raw        ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_getf_unscaled  ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_get_unscaled   ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_getf           ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_get            ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_elapsedf_unscaled();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_elapsed_unscaled();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_elapsedf       ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_elapsed        ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_total_raw      ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_totalf_unscaled();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_total_unscaled ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_totalf         ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_total          ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_stepf_unscaled ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_step_unscaled  ();
		[DllImport(dll, CallingConvention = call                 )] public static extern float               time_stepf          ();
		[DllImport(dll, CallingConvention = call                 )] public static extern double              time_step           ();
		[DllImport(dll, CallingConvention = call                 )] public static extern void                time_scale          (double scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                time_set_time       (double total_seconds, double frame_elapsed_seconds);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                vec3_cross          (in Vec3 a, in Vec3 b);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_difference     (in Quat a, in Quat b);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_lookat         (in Vec3 from, in Vec3 at);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_lookat_up      (in Vec3 from, in Vec3 at, in Vec3 up);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_from_angles    (float pitch_x_deg, float yaw_y_deg, float roll_z_deg);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_slerp          (in Quat a, in Quat b, float t);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_normalize      (in Quat a);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_inverse        (in Quat a);
		[DllImport(dll, CallingConvention = call                 )] public static extern Quat                quat_mul            (in Quat a, in Quat b);
		[DllImport(dll, CallingConvention = call                 )] public static extern Vec3                quat_mul_vec        (in Quat a, in Vec3 b);

		///////////////////////////////////////////

		[DllImport(dll, CallingConvention = call                 )] public static extern Matrix              pose_matrix         (in Pose pose, Vec3 scale);
		[DllImport(dll, CallingConvention = call                 )] public static extern void                pose_matrix_out     (in Pose pose, out Matrix out_result, Vec3 scale);

		///////////////////////////////////////////
